style.css
@font-face {
  font-family: Inria;
  src: url("font/InriaSerif-Light.ttf");
}
@font-face {
  font-family: Syne;
  src: url("font/Syne[wght].ttf");
}

:root {
  cursor: url(images/cursor-default.png), auto;
}

body {
  margin: 0 10% 0 10%;
  font-family: Inria, serif;
  font-size: 3.2vw;
  color: #3e43b9;
  background-color: #f7f7ef;
}

a,
a:visited,
a:active {
  font-family: Syne, serif;
  font-weight: 800;
  font-size: 3.2vw;
  color: #3e43b9;
  text-decoration: none;
  cursor: url(images/cursor-pointer.png), pointer;
}

a:hover {
  color: #43b7a9;
  text-decoration: none;
  cursor: url(images/cursor-pointer.png), pointer;
}

p.divider {
  text-align: center;
  margin: 9% 0 9% 0;
}

p.contact {
  text-align: center;
  margin-bottom: 15%;
}

p.mail {
  animation: rotate 3.5s infinite;
  animation-timing-function: cubic-bezier(1, 0, 0.5, 1);
}

p.arena {
  animation: rotate 4.5s infinite;
  animation-timing-function: cubic-bezier(1, 0, 0.5, 1);
}

p.tumblr {
  animation: rotate 5.5s infinite;
  animation-timing-function: cubic-bezier(1, 0, 0.5, 1);
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

sup {
  font-size: 1.5vw;
}

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.spotify-playlists {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas:
    "q2-22 q1-22 q4-21 q3-21"
    "q2-21 q1-21 q4-20 q3-20";
}

#q2-22 {
  grid-area: q2-22;
}

#q1-22 {
  grid-area: q1-22;
}

#q4-21 {
  grid-area: q4-21;
}

#q3-21 {
  grid-area: q3-21;
}

#q2-21 {
  grid-area: q2-21;
}

#q1-21 {
  grid-area: q1-21;
}

#q4-20 {
  grid-area: q4-20;
}

#q3-20 {
  grid-area: q3-20;
}

@media only screen and (max-width: 550px) {
  .spotify-playlists {
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas:
      "q2-22 q1-22 q4-21"
      "q3-21 q2-21 q1-21"
      "q4-20 q3-20 . ";
  }

  body {
    max-width: 550px;
    margin: 0 5% 0 5%;
    font-size: 25px;
  }
}

